@@ -24,6 +24,12 @@
 2009-05-05  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/utility.c (SystemCommand): Added access confirmation
+        checks for external commands.
+
+  <LI> magick/unix_port.c (MagickSpawnVP): Added access confirmation
+        checks for external commands.
+
   <LI> coders/url.c (ReadURLImage): Added access confirmation checks
         for URLs.
 
